--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,8 +1,9 @@
 @use './partials/setup';
 @use './partials/typography';
 @use './partials/variables';
-@use './partials/mediaQuery';
 @use './partials/basestyles';
 @use './partials/header';
 @use './partials/nav';
 @use './partials/sections';
+@use './partials/footer';
+@use './partials/mediaQuery';
