moved changes to project1

--- a/styles/sass/partials/_mediaQuery.scss
+++ b/styles/sass/partials/_mediaQuery.scss
@@ -260,6 +260,7 @@
         height: auto;
     }
     .blogForm {
+        width: 100%;
         height: auto;
         .nameEmail {
             flex-direction: column;
