--- a/styles/styles.css
+++ b/styles/styles.css
@@ -632,8 +632,9 @@ aside {
   width: 30%;
 }
 
-.blogMain {
-  width: 70%;
+.blogMain,
+.blogForm {
+  width: 100%;
   margin: 0px;
 }
 
@@ -688,6 +689,16 @@ aside {
 
 .aboutAuthor img {
   width: 100%;
+}
+
+.rightSide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .post1,
@@ -1199,6 +1210,7 @@ aside {
     height: auto;
   }
   .blogForm {
+    width: 100%;
     height: auto;
   }
   .blogForm .nameEmail {
